<resources>
    <string name="app_name">timetable</string>
    <string name="frontHed">HeLLo wOrLd</string>
    <string name="btnsignup">SIGN UP</string>
    <string name="alreadyaccount">Already have an account? Log in</string>
    <string name="hedreg">REGISTER</string>
    <string name="inputStudentID">Student ID</string>
    <string name="inputEmailAdd">E-Mail</string>
    <string name="inputPassword">Password</string>
    <string name="inputConfPas">Confirm Password</string>
    <string name="loginHed">LOGIN</string>
    <string name="username">Username</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="donthaveacc">Don\'t have an account? Sign Up</string>
    <string name="passwordhed">PASSWORD</string>
    <string name="passold">Old Password</string>
    <string name="passnew">New Password</string>
    <string name="passconf">Confirm Password</string>
    <string name="inputfirst">Ramya</string>
    <string name="inputmail">it20203580@my,sliit.lk</string>
    <string name="inputeduqua">A/L O/L HNDIT</string>
    <string name="btnupdate">UPDATE</string>
    <string name="stufullname">RAMYA MANORANJAN</string>
    <string name="studentid">IT20203580</string>
    <string name="type">STUDENT</string>
    <string name="lecfullname">SIYAPATHA WEERASINGHE</string>
    <string name="typelec">LECTURER</string>
    <string name="lecfirst">Siyapatha</string>
    <string name="leclast">Weerasinghe</string>
    <string name="lecmail">siyapatha@my.sliit.lk</string>
    <string name="inputName">Name</string>
    <string name="edu">Educational Qualification</string>
    <string name="taglecfirst">Name</string>
    <string name="eduquali">Educational Qualification</string>
    <string name="tageduqua">Educational Qualification</string>
    <string name="tagname">Name</string>
    <string name="btnreset">RESET PASSWORD</string>
    <string name="usernamepass">UserName</string>
    <string name="chapassbtn">CHANGE PASSWORD</string>
</resources>