<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic1"
    android:orientation="vertical"
    tools:context=".student_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:background="@color/google"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profileimg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/account"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/stuname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/profileimg"
            android:fontFamily="sans-serif-black"
            android:text="@string/stufullname"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/studentid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stuname"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/profileimg"
            android:includeFontPadding="false"
            android:text="@string/studentid"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/typelec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/studentid"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/profileimg"
            android:includeFontPadding="false"
            android:text="@string/type"
            android:textSize="16dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="395dp"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tagname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/tagname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputfirst"
                android:layout_width="358dp"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="15dp"
                android:text="@string/inputfirst">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tagmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/inputEmailAdd">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputmail"
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="15dp"
                android:text="@string/inputmail"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tageduqua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/tageduqua">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputeduqua"
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/book"
                android:drawablePadding="15dp"
                android:text="@string/inputeduqua"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnupdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/google"
            android:text="@string/btnupdate"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/google"
            app:iconPadding="10dp"></Button>

        <Button
            android:id="@+id/btnpasschn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/chapassbtn"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/design_default_color_error"
            app:iconPadding="20dp" />

    </LinearLayout>


</LinearLayout>


