<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic1"
    tools:context=".password">

    <TextView
        android:id="@+id/passwordhed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/passwordhed"
        android:textColor="@color/RR1"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/usernamepass"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/usernamepass"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordhed" />




    <EditText
        android:id="@+id/passnew"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/passnew"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/usernamepass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernamepass"
        app:layout_constraintTop_toBottomOf="@+id/usernamepass" />


    <EditText
        android:id="@+id/passconf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/passconf"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/passnew"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passnew"
        app:layout_constraintTop_toBottomOf="@+id/passnew" />

    <Button
        android:id="@+id/btnreset"
        android:layout_width="231dp"
        android:layout_height="68dp"
        android:layout_marginTop="60dp"
        android:text="@string/btnreset"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/google"
        app:layout_constraintEnd_toEndOf="@+id/passconf"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/passconf"
        app:layout_constraintTop_toBottomOf="@+id/passconf" />



</androidx.constraintlayout.widget.ConstraintLayout>